v2.0.7
⚡️取消翻译结果为空时的异常提示行为